--- a/vpc-api-test/azure-pipelines.yml
+++ b/vpc-api-test/azure-pipelines.yml
@@ -18,5 +18,6 @@ steps:
 - script: |
     npm install
     npm build
+    npm install mocha chai --save-dev
   displayName: 'npm install and build'
   
