Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,4 +19,18 @@ steps:
     npm install
     npm build
     npm install mocha chai --save-dev
+
+# Publish Test Results
+# Publish test results to Azure Pipelines
+- task: PublishTestResults@2
+  inputs:
+    testResultsFormat: 'JUnit' # Options: JUnit, NUnit, VSTest, xUnit, cTest
+    testResultsFiles: '**/TEST-*.xml' 
+    searchFolder: '$(System.DefaultWorkingDirectory)' # Optional
+    mergeTestResults: false # Optional
+    failTaskOnFailedTests: false # Optional
+    testRunTitle: # Optional
+    buildPlatform: # Optional
+    buildConfiguration: # Optional
+    publishRunAttachments: true # Optional    
   displayName: 'npm install and build'
