--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -24,4 +24,6 @@ stages:
         npm install
         npm build
         npm install mocha chai --save-dev
+        npm test
       displayName: 'npm install and build'
+      
