--- a/vpc-api-test/azure-pipelines.yml
+++ b/vpc-api-test/azure-pipelines.yml
@@ -19,4 +19,5 @@ steps:
     npm install
     npm build
     npm install mocha chai --save-dev
+    npm test
   displayName: 'npm install and build'
