--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,6 @@ steps:
 - script: |
     npm install
     npm build
-    npm install mocha chai --save-dev
+    npm test
 
   displayName: 'npm install and build'
