--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,6 @@ steps:
 - script: |
     npm init
     npm install
-    npm run build
-    npm install mocha chai --save-dev
-    npm test
+    npm build
+    npm run test
   displayName: 'npm install and build'
