--- a/vpc-api-test/azure-pipelines.yml
+++ b/vpc-api-test/azure-pipelines.yml
@@ -15,7 +15,7 @@ steps:
     versionSpec: '10.x'
   displayName: 'Install Node.js'
 
-- script: |
+- script: 
     npm install
     npm build
     npm test
